--- a/styles/colors.less
+++ b/styles/colors.less
@@ -13,3 +13,33 @@
 @red: #cc6666;
 @orange: #de935f;
 @light-orange: #f0c674;
+
+// backgrounds
+@editor-background: #021d21;
+@selection-background: #0a594d;
+@gutter-background: #102533;
+@gutter-background-active: lighten(@gutter-background, 15%);
+
+// editor components
+@cursor: #b5ff00;
+@wrap-guide: #652c2c;
+@invisibles: #393939;
+@low-priority: #8f8f8f;
+@high-priority: #ffffff;
+@found-marker: lighten(@selection-background, 10%);
+@found-marker-active: lighten(@found-marker, 10%);
+
+// diff components
+@renamed: #3857d7;
+@added: #23881a;
+@modified: #dad800;
+@removed: #bb1717;
+
+// code components
+@text-default: #eeeeee;
+@comment: #626262;
+@keyword: #c37af6;
+@control: #4b83cd;
+@storage: #50cc95;
+@string: #c4b773;
+@class: #ff5e3b;
