Darkened the background a bit. Added styling to differentiate return types from access modifiers.

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -15,7 +15,7 @@
 @light-orange: #f0c674;
 
 // backgrounds
-@editor-background: #021d21;
+@editor-background: #071213;
 @selection-background: #0a594d;
 @gutter-background: #102533;
 @gutter-background-active: lighten(@gutter-background, 15%);
@@ -44,6 +44,7 @@
 // code type components
 // cool colors, medium contrast, medium saturation
 @storage: #3a986e;
+@storage-modifier: darken(@storage, 10%);
 
 // code data components
 // warm colors, medium contrast, high saturation
