--- a/styles/base.less
+++ b/styles/base.less
@@ -86,6 +86,9 @@ atom-text-editor {
   color: @storage;
   font-style: italic;
   font-weight: bold;
+  &.syntax--modifier {
+      color: @storage-modifier;
+  }
 }
 
 .syntax--constant {
