Added new colors for package name and imported package names. Added screenshot to the readme.

--- a/styles/base.less
+++ b/styles/base.less
@@ -88,6 +88,12 @@ atom-text-editor {
   font-weight: bold;
   &.syntax--modifier {
       color: @storage-modifier;
+      &.syntax--package {
+          color: @storage-package;
+      }
+      &.syntax--import {
+          color: @storage-import;
+      }
   }
 }
 
