--- a/styles/colors.less
+++ b/styles/colors.less
@@ -45,6 +45,8 @@
 // cool colors, medium contrast, medium saturation
 @storage: #3a986e;
 @storage-modifier: darken(@storage, 10%);
+@storage-package: #3793d6;
+@storage-import: darken(@storage-package, 20%);
 
 // code data components
 // warm colors, medium contrast, high saturation
